android: allow vlc_tick_wait to be called from a non-killable thread

fixes: #28727